--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <header class="header">
         <a href="#" class="logo">ARN.</a>
+        <div class="toggle-button">&#9776;</div> <!-- Tombol hamburger -->
         <nav class="navbar">
           <a href="#">Home</a>
           <a href="#">About</a>
@@ -97,7 +98,7 @@
 
   </section>
   
-  
-
+  <!-- JavaScript -->
+  <script src="script.js"></script>
 </body>
 </html>
