--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <h1>Hey There<br>I’m Ardhi</h1>
       <p> Welcome to my portfolio. Let's explore and 
         take a look at my works!</p>
-      <a href="#">Email Me</a>
+      <a href="contact.html">Email Me</a>
     </div>
 
     <div class="home-images">
